updated to fix weird right margin on mobile and making sure all containers are the same width

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -14,9 +14,9 @@
 }
 
 .navbar-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 $spacing-3;
+  // max-width: 1200px;
+  // margin: 0 auto;
+  // padding: 0 $spacing-3;
   position: relative;
 }
 
